# luhn-formula-py

./: README.md  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml
tests/: test_luhnformula.py
