[metadata]
name = luhn-formula
#name = luhnformula
version = 1.0.0
author = code-127
author_email = 105444219+code-127@users.noreply.github.com
description = Number validator and generator based on luhn's formula
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/code-127/luhn-formula.git
project_urls =
    Bug Tracker = https://github.com/code-127/luhn-formula/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    #Development Status :: 1 - Planning
    #Development Status :: 2 - Pre-Alpha    
    #Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    Development Status :: 5 - Production/Stable
    #Development Status :: 6 - Mature
    #Development Status :: 7 - Inactive

Development Status :: 5 - Production/Stable
[options]
package_dir =
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
